; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/typec/ucsi/extr_ucsi_ccg.c_ucsi_ccg_ack_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/typec/ucsi/extr_ucsi_ccg.c_ucsi_ccg_ack_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucsi_ccg = type { i32 }

@CCGX_RAB_INTR_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucsi_ccg*)* @ucsi_ccg_ack_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ucsi_ccg_ack_interrupt(%struct.ucsi_ccg* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ucsi_ccg*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store %struct.ucsi_ccg* %0, %struct.ucsi_ccg** %3, align 8
  %6 = load %struct.ucsi_ccg*, %struct.ucsi_ccg** %3, align 8
  %7 = load i32, i32* @CCGX_RAB_INTR_REG, align 4
  %8 = call i32 @ccg_read(%struct.ucsi_ccg* %6, i32 %7, i8* %5, i32 1)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load %struct.ucsi_ccg*, %struct.ucsi_ccg** %3, align 8
  %15 = load i32, i32* @CCGX_RAB_INTR_REG, align 4
  %16 = call i32 @ccg_write(%struct.ucsi_ccg* %14, i32 %15, i8* %5, i32 1)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @ccg_read(%struct.ucsi_ccg*, i32, i8*, i32) #1

declare dso_local i32 @ccg_write(%struct.ucsi_ccg*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
